[package]
name = "lilnouns-click"
version = "1.1.0-alpha.35"
authors = ["Milad Nekofar <milad@nekofar.com>"]
edition = "2021"
description = "A Nounish URL shortener for LilNouns DAO."
repository = "https://github.com/lilnouns/lilnouns-click"
license = "Apache-2.0"
include = ["*.graphql"]
rust-version = "1.83.0"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.7.5", default-features = false }
graphql_client = { version = "0.14.0", features = ["reqwest"] }
html-escape = { version = "0.2.13", default-features = false }
html-minifier = { version = "5.0.0", default-features = false }
log = { version = "0.4.22", features = [] }
percent-encoding = "2.3.1"
regex = "1.11.1"
reqwest = "0.11.26"
serde = { version = "1.0.215", features = ["derive"] }
sqids = "0.4.1"
tower-service = "0.3.2"
unidecode = "0.3.0"
url = "2.5.4"
worker = { version = "0.4.2", features = ["http", "axum"] }
worker-macros = { version = "0.4.2", features = ["http"] }
serde_json = "1.0.133"
console_error_panic_hook = { version = "0.1.1" }

[profile.release]
lto = true
strip = true
codegen-units = 1
