[package]
name = "lilnouns-click"
version = "1.1.0-beta.12"
authors = ["Milad Nekofar <milad@nekofar.com>"]
edition = "2021"
description = "A Nounish URL shortener for LilNouns DAO."
repository = "https://github.com/lilnouns/lilnouns-click"
license = "Apache-2.0"
include = ["*.graphql"]
rust-version = "1.83.0"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
graphql_client = { version = "0.14.0", features = ["reqwest"] }
html-escape = { version = "0.2.13", default-features = false }
html-minifier = { version = "5.0.0", default-features = false }
log = { version = "0.4.27", features = [] }
percent-encoding = "2.3.2"
regex = "1.11.1"
reqwest = "0.11.26"
serde = { version = "1.0.219", features = ["derive"] }
sqids = "0.4.2"
unidecode = "0.3.0"
url = "2.5.7"
worker = "0.5.0"
serde_json = "1.0.143"

[profile.release]
lto = true
strip = true
codegen-units = 1
